<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_grey_700_24dp"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_company_profile"
            android:icon="@drawable/ic_person_outline_grey_700_24dp"
            android:title="@string/menu_company_profile" />

        <item
            android:id="@+id/nav_manage_participants"
            android:icon="@drawable/ic_people_grey_700_24dp"
            android:title="@string/menu_manage_participants" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_build_grey_700_24dp"
            android:title="@string/menu_settings" />
    </group>

</menu>
