<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pubeo.Advertiser.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_company_profile"
        android:name="com.example.pubeo.Advertiser.ui.companyProfile.CompanyProfileFragment"
        android:label="@string/menu_company_profile"
        tools:layout="@layout/fragment_company_profile" />

    <fragment
        android:id="@+id/nav_manage_participants"
        android:name="com.example.pubeo.Advertiser.ui.manageParticipants.ManageParticipantsFragment"
        android:label="@string/menu_manage_participants"
        tools:layout="@layout/fragment_manage_participants" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.pubeo.Advertiser.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>