<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AdvertiserSignInActivity">

    <ImageView
        android:id="@+id/pubeoLogoAdvertiserSignIn"
        android:layout_width="162dp"
        android:layout_height="152dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="125dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pubeo_logo" />

    <Button
        android:id="@+id/signInButtonAdvertiser"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/login_button_shape"
        android:text="@string/Log_in_button"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordAdvertiserSignInField" />

    <TextView
        android:id="@+id/passwordForgottenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="28dp"
        android:text="@string/password_forgotten"
        android:textColor="@color/lightgrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButtonAdvertiser" />

    <EditText
        android:id="@+id/mailAdvertiserSignInField"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="33dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextAdvertiser" />

    <EditText
        android:id="@+id/passwordAdvertiserSignInField"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="33dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        tools:ignore="Autofill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailAdvertiserSignInField" />

    <TextView
        android:id="@+id/loginTextAdvertiser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="70dp"
        android:text="@string/loginTextAdvertiser"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pubeoLogoAdvertiserSignIn" />

    <ImageView
        android:id="@+id/whiteArrowSignInAdvertiser"
        android:layout_width="43dp"
        android:layout_height="37dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/back_arrow_desc"
        app:layout_constraintEnd_toStartOf="@+id/loginTextAdvertiser"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>