<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button2"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/login_button_shape"
        android:textColor="#ffffff"
        android:text="@string/Log_in_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="63dp"
        android:text="@string/Sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <RadioGroup
        android:checkedButton="@+id/particularButton"
        android:layout_width="279dp"
        android:layout_height="52dp"
        android:layout_marginStart="62dp"
        android:layout_marginBottom="38dp"
        android:orientation="horizontal"
        android:background="@drawable/box_user_type_choice"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" >

        <RadioButton
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:id="@+id/particularButton"
            android:background="@drawable/toggle_widget_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/particular"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/advertiserButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/advertiser"
            android:textColor="#ffffff" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>